updates style, food.js and recipe.html
added html elements to take in recipes. added js to store and pull saved recipes, added styling to style the recipe page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,3 +34,14 @@
   width: 150px;
   border-radius: 50%;
 }
+
+
+
+
+/* Recipe Book Styling */
+.split-container{
+  width: 100%;
+}
+.recipe-div{
+  width: 47%;
+}
