added js to put cards on recipe book page
added js to put saved data to recipe book. added styling and updated js in food and recipe to get correct saved data to the sites

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,3 +45,11 @@
 .recipe-div{
   width: 47%;
 }
+
+.modal-body ul, .modal-body ol {
+  padding-left: 20px;
+}
+
+.modal-body h6{
+  font-weight: bold;
+}
