--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,3 +51,11 @@
 .modal-body h6{
   font-weight: bold;
 }
+/* want to add pseudoclass that changes if button was clicked to display the slected option? still figuring that out */
+/* #byName:on{
+  
+}
+
+#byIngredient{
+
+} */
