--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,26 +38,26 @@ body {
   }
 
 .left-img {
-  background: url('https://wallpapershome.com/images/wallpapers/food-1080x1920-cooking-grill-vegetables-peppers-mushrooms-tomatoes-403.jpg');
+  background: url("../images/recipeleftimg.jpg");
   width: 50%;
   height: 100%;
   opacity: 0.5;
 }
 
 .left-img:hover {
-  background: url('https://wallpapershome.com/images/wallpapers/food-1080x1920-cooking-grill-vegetables-peppers-mushrooms-tomatoes-403.jpg');
+  background: url("../images/recipeleftimg.jpg");
   opacity: 1.0;
   text-decoration: none;
 }
 
 .right-img {
-  background: url('https://i.pinimg.com/originals/21/20/c5/2120c513935d107e8262f2818ea652d3.jpg');
+  background: url("../images/drinkrightimg.jpg");
   width: 50%;
   height: 100%;
   opacity: 0.5;
 }
 .right-img:hover {
-  background: url('https://i.pinimg.com/originals/21/20/c5/2120c513935d107e8262f2818ea652d3.jpg');
+  background: url("../images/drinkrightimg.jpg");
   opacity: 1.0;
   text-decoration: none;
 }
