--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -126,19 +126,18 @@ footer p{
 }
 
 /* Food Recipe Search Page Styling */
-
-#foodSearchPage {
-  background-image: url('../images/recipeleftimg.jpg');
-  opacity: 1.5;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: 100%;
+#foodSearchPage{
+  background: url('../images/food-recipe-background.jpg') no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
   color: white;
 }
 
 .container{
   background-color: #adadad;
-  margin: 10% auto;
+  margin: 5% auto;
   padding: 20px;
   border-radius: 10px;
 }
