--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,7 @@
 font-family: 'Heebo', sans-serif;
 font-family: 'Noto Sans KR', sans-serif;
 font-family: 'Source Serif Pro', serif;
+font-family: 'Quicksand', sans-serif;
 
 
 */
