--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,6 +102,11 @@ header{
   -o-background-size: cover;
 }
 
+.drink-page-content{
+  background-color: #ccccccc9;
+  border-radius: 10px;
+}
+
 .submitBtn {
   background-color: #032c05;
   border: none;
@@ -154,6 +159,7 @@ header{
 
 .card{
   background-color: #e9e9e9;
+  border-radius: 10px;
 }
 
 #allergies{
