--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,13 +121,24 @@ header{
 
 #drinkSearchPage .btn-primary{
   background-color: rgb(15, 68, 46);
-  border: 2px solid rgb(82, 6, 59);
+  border: 2px solid rgb(223, 202, 19);
   font-family: 'Heebo', sans-serif;
 }
 
 #drinkSearchPage .btn-primary:hover{
   background-color: #394e10;
   border: 2px solid #326e20;
+}
+
+#drinkSearchPage .btn-info{
+  background-color: rgb(15, 68, 46);
+  border: 2px solid rgb(223, 202, 19);
+  font-family: 'Heebo', sans-serif;
+}
+
+#drinkSearchPage .btn-info:hover{
+  background-color: rgb(15, 68, 46);
+  border: 2px solid rgb(223, 202, 19);
 }
 
 /* Food Recipe Search Page Styling */
